update map style

--- a/arknova-board.html
+++ b/arknova-board.html
@@ -42,22 +42,22 @@
     let mapTitle =
           ["观测塔","户外营地","银湖","商业港口","主题餐厅","研究院","冰淇淋甜品店","好莱坞山","地理动物园","救助站","地图0","地图A"];
     let mapText =
-          ["饲养区必须与观测塔的六角格相邻，而不仅仅是与另外3个岩石格相邻。这个观测平台对特殊饲养区无效。如果你将一个动物放归野外(而因此将一个已占用的饲养区翻回闲置的一面)，然后安置一个新动物到该饲养区，你将再次获得2魅力。",
-              "饲养区必须与户外营地的六角格相邻，而不仅仅是与另外4个水域格相邻。户外营地对特殊饲养区无效。当安置动物时，你可以将任何与户外营地相邻的标准饲养区，视为扩大2格的饲养区。",
-              "环湖四周是高利润区域。",
-              "一旦你在商业港口相邻的可建造六角格放置了建筑，则商业港口视为已被连接的。你可以再你回合的前、中、后任意时刻，或是行动中，使用其能力。然而，每回合你仅可以通过商业港口弃除1张卡牌。你不可以在休息期间或其他玩家的回合中，使用其能力。",
-              "在休息期间，每有一个与主题餐厅相邻并覆盖有建筑的六角格，你获得1元收入。与你在这里建造的建筑类型，以及饲养区是否被占用无关。",
-              "一旦你在研究院相邻的可建造六角格放置了建筑，则研究院视为已连接的。一旦激活，你能在缺少1个条件的情况下，打出动物卡牌，但你不能忽略岩石或者水域格的需求。",
-              "如果你已覆盖了所有冰淇淋店，则在休息的收入阶段中，你动物园地图上的每个贩售亭使你额外获得1元。",
-              "具有H标记的六角格可以如同其它六角格一样被覆盖，这类似于放置奖励，但并不视为一个放置奖励(不能触发考古学家的效果)。每次你放置一个建筑到H标记上时，从牌库中依次展示卡牌，直到你展示了一张赞助商卡牌，将该牌加入手牌并弃置其余展示的卡牌。一旦你覆盖了所有的H标志，则你之后打出的每张赞助商卡牌等级-1。",
-              "游戏开始时，在版图上每个大洲的空缺位置上放置一个玩家标记。每个大洲限一次，当你放置对应大洲动物到版图对应大洲区域时，可以移除大洲标记并选择右侧5个奖励中的一个，并将玩家标记移回供应区。不论是普通饲养区还是特殊饲养区都可以触发技能。群居动物无法触发技能，因为群居动物并不会使用特定的饲养区。左侧动保奖励效果是移除一个大洲玩家标记，并选择下方奖励中的一个。",
-              "挖掘1(你可以从手牌中弃1张牌并摸1张牌，或者从展示区弃1张牌并补充1张牌)。如果你弃置的是动物牌(除了萌宠)，可以将卡牌放置到上方绿色箭头区域，该卡牌视为“已打出”，但不会获得其它卡牌效果(例如魅力和卡牌上的特殊技能)。已打出的内容包括：标志(可以触发赞助卡牌的打出标志效果)、饲养区需求(例如可以完成小型动物的保护项目)、岩石标水域需求。你最多只能放置3张动物卡牌，如果在触发技能时已经放置了3张动物，则你只能触发挖掘1的效果。你不能放生上方的动物。",
-              "一般推新使用，强度较高。",
-              "一般推新使用，强度较高。"];
+          ["1. 饲养区必须与观测塔的六角格相邻，而不仅仅是与另外3个岩石格相邻。<br>2. 这个观测平台对特殊饲养区无效。<br>3. 如果你将一个动物放归野外(而因此将一个已占用的饲养区翻回闲置的一面)，然后安置一个新动物到该饲养区，你将再次获得2魅力。",
+              "1. 饲养区必须与户外营地的六角格相邻，而不仅仅是与另外4个水域格相邻。<br>2. 户外营地对特殊饲养区无效。<br>3. 当安置动物时，你可以将任何与户外营地相邻的标准饲养区，视为扩大2格的饲养区。",
+              "1. 环湖四周是高利润区域。",
+              "1. 一旦你在商业港口相邻的可建造六角格放置了建筑，则商业港口视为已被连接的。<br>2. 你可以再你回合的前、中、后任意时刻，或是行动中，使用其能力。<br>3. 然而，每回合你仅可以通过商业港口弃除1张卡牌。<br>3.你不可以在休息期间或其他玩家的回合中，使用其能力。",
+              "1. 在休息期间，每有一个与主题餐厅相邻并覆盖有建筑的六角格，你获得1元收入。<br>2. 这与你在这里建造的建筑类型，以及饲养区是否被占用无关。<br> 3. <b>左侧动保奖励</b>: 即使你还没有升级“建造”行动卡牌，你依然能够免费建造这2个指定特殊饲养区中的1个。",
+              "1. 一旦你在研究院相邻的可建造六角格放置了建筑，则研究院视为已连接的。<br>2. 一旦激活，你能在缺少1个条件的情况下，打出动物卡牌，但你不能忽略岩石或者水域格的需求。",
+              "1. 如果你已覆盖了所有冰淇淋店，则在休息的收入阶段中，你动物园地图上的每个贩售亭使你额外获得1元。",
+              "1. 具有H标记的六角格可以如同其它六角格一样被覆盖，这类似于放置奖励，但<b>并不视为</b>一个放置奖励(不能触发考古学家的效果)。<br>2. 每次你放置一个建筑到H标记上时，从牌库中依次展示卡牌，直到你展示了一张赞助商卡牌，将该牌加入手牌并弃置其余展示的卡牌。<br>3. 一旦你覆盖了所有的H标志，则你之后打出的每张赞助商卡牌等级-1。<br>4. <b>左侧动保奖励</b>: 如果未升级“协会”行动卡牌，则不能通过这个奖励来获得第三个合作动物园。",
+              "1. 游戏开始时，在版图上每个大洲的空缺位置上放置一个玩家标记。<br>2. 每个大洲限一次，当你放置对应大洲动物到版图对应大洲区域时，可以移除大洲标记并选择右侧5个奖励中的<b>任意</b>一个，并将玩家标记移回供应区。<br>3. 不论是普通饲养区还是特殊饲养区都可以触发技能。<br>4. 群居动物无法触发技能，因为群居动物并不会使用特定的饲养区。<br>5. <b>左侧动保奖励</b>: 移除一个大洲玩家标记，并选择下方奖励中的一个。",
+              "1. 挖掘1(你可以从手牌中弃1张牌并摸1张牌，或者从展示区弃1张牌并补充1张牌)。<br>2. 如果你弃置的是动物牌(除了萌宠)，可以将卡牌放置到上方绿色箭头区域，该卡牌视为“<b>已打出</b>”，但不会获得其它卡牌效果(例如魅力和卡牌上的特殊技能)。<br>3. 已打出的内容包括：<br>&emsp;&emsp;标志 (可以触发赞助卡牌的打出标志效果)<br>&emsp;&emsp;饲养区需求 (例如可以完成小型动物的保护项目)<br>&emsp;&emsp;岩石标水域需求。<br>4. 你最多只能放置3张动物卡牌，如果在触发技能时已经放置了3张动物，则你只能触发挖掘1的效果。<br>5. 你不能放生箭头指示的动物。",
+              "一般推新使用，不建议与地图1-10混用。",
+              "一般推新使用，不建议与地图1-10混用。"];
     document.getElementById("map-board").src = mysrc[i];
       console.log(document.getElementById("map-board"))
       document.getElementById("map-title").textContent = mapTitle[i];
-      document.getElementById("map-text").textContent = mapText[i];
+      document.getElementById("map-text").innerHTML = mapText[i];
 
   }
 </script>
@@ -109,9 +109,9 @@
   margin-top: 20px;
     box-shadow: 0 0 7px 1px black;">
             <br>
-            <span id = "map-title" style="font-size: 40px;margin-left: 10px;margin-top: 20px;"></span>
+            <span id = "map-title" style="font-size: 40px;margin-left: 7px;margin-top: 20px;color: #454d7e;"></span>
             <br>
-            <span id = "map-text" style="font-size: 20px;margin-left: 10px;margin-top: 20px;"></span>
+            <p align="left" style="font-size: 20px;margin-left: 7px;margin-top: 0px;background-color: #efeab3"><span id = "map-text" ></span></p>
             </div>
 
       <script>setMap(0);</script>
