add return func

--- a/arknova-action.html
+++ b/arknova-action.html
@@ -11,7 +11,7 @@
   <meta http-equiv="Pragma" content="no-cache">
   <meta http-equiv="Cache-control" content="no-cache">
   <meta http-equiv="Cache" content="no-cache">
-  
+
   <link rel="shortcut icon" type="image/png" href="images-ark/favicon.png">
   <link rel="stylesheet" type="text/css" href="css/mystyles-ark.css?v=1.0.0">
   <link rel="stylesheet" href="css/odometer.css">
@@ -49,8 +49,15 @@
 
     </div>
 
+              <button id="return" class="button2 btn-reset" onclick="location.href='/index.html'" type="button">返回主页</button>
+
+
+
+
+
 
   </div>
+
 
   <!--ANIMALS-->
   <ul class="myUL" style="clear:both;">
