--- a/arknova-board.html
+++ b/arknova-board.html
@@ -93,7 +93,11 @@
       <button id="plan0" class="button btn1 background-color-beginner-map  " onclick="setMap(10)" title="filter Animals cards">地图0 新手图</button>
       <button id="planA" class="button btn1 background-color-beginner-map  " onclick="setMap(11)" title="filter Animals cards">地图A 新手图</button>
     </div>
+
   </div>
+              <button id="return" class="button2 btn-return"  onclick="location.href='/index.html'" type="button">返回主页</button>
+
+
 
         <div style="        position:relative;
 
@@ -102,16 +106,16 @@
         margin-left: 15px;">
 
       <img class = "map-board" id = "map-board" src = "../images-ark/compress/plan1.jpg" title = ""          style="
-  width: 760px;
-  height: 392px;
+  width: 800px;
+  height: 413px;
   border-radius: 5px;
-  margin-left: 6px;
-  margin-top: 20px;
+  margin-left: -15px;
+  margin-top: 7px;
     box-shadow: 0 0 7px 1px black;">
             <br>
-            <span id = "map-title" style="font-size: 40px;margin-left: 7px;margin-top: 20px;color: #454d7e;"></span>
+            <span id = "map-title" style="font-size: 40px;margin-left: -10px;margin-top: 20px;color: #454d7e;"></span>
             <br>
-            <p align="left" style="font-size: 20px;margin-left: 7px;margin-top: 0px;background-color: #efeab3"><span id = "map-text" ></span></p>
+            <p align="left" style="font-size: 20px;margin-left: -10px;margin-top: 0px;background-color: #efeab3"><span id = "map-text" ></span></p>
             </div>
 
       <script>setMap(0);</script>
