--- a/arknova-cards-list.html
+++ b/arknova-cards-list.html
@@ -130,8 +130,8 @@
     </div>
   </div>
     <div id="buttonsContainer-footer">
-      <button id="reset" class="button2 btn-reset" onclick="clearInput();showAll();" title="Reset all selected filters">重置</button>
-
+      <button id="reset" class="button2 btn-return" onclick="clearInput();showAll();" title="Reset all selected filters">重置</button>
+        <button id="return" class="button2 btn-return" onclick="location.href='/index.html'" type="button">返回主页</button>
       <div class="card-footer" style="margin-left:0px"><div class="card-footer-projects">动物</div></div>
       <div id="totalProjects" class="totalCardsCount odometer" data-minintegerlen="3"></div>
 
@@ -146,7 +146,8 @@
 
     </div>
 
-  </div>
+
+      </div>
 
   <!--ANIMALS-->
   <ul class="myUL" style="clear:both;">
