add return func

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
       <a class="planet1" href="/arknova-cards-list.html">游戏卡牌</a>
       <a class="planet2" href="/arknova-board.html">游戏版图</a>
       <a class="planet4" href="/arknova-action.html">行动卡牌</a>
-      <a class="planet6" href="http://blog.ender.lol/archives/arknovapack1" target="_blank">新地图打印</a>
+      <a class="planet9" href="https://www.bilibili.com/video/BV1dd4y1s75m/" target="_blank">水族馆扩介绍</a>
+<!--      <a class="planet6" href="http://blog.ender.lol/archives/arknovapack1" target="_blank">新地图打印</a>-->
       <a class="planet3" href="https://www.bilibili.com/video/BV1iF411P7Un/" target="_blank">建议反馈</a>
 
     </div>
