--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <!--- meta tags  --->
   <meta name="viewport" content="width=device-width">
   <meta charset="UTF-8">
-  <meta name="description" content="TERRAFORMING MARS COMPLETE ANIMATED LIST">
+  <meta name="description" content="方舟动物园卡表">
   <meta name="keywords" content="HTML,CSS,JavaScript">
   <meta name="viewport" content='width=400'>
 
