update marine world

--- a/arknova-cards-list.html
+++ b/arknova-cards-list.html
@@ -67,7 +67,8 @@
       <button id="herbivore" class="button btn3 icon-herbivore"  onclick="filterFunction(id)" title="filter by Herbivor icon"></button>
       <button id="bird" class="button btn3 icon-bird"  onclick="filterFunction(id)" title="filter by Bird icon"></button>
       <button id="pet" class="button btn3 icon-pet "  onclick="filterFunction(id)" title="filter by Pet icon"></button>
-      <button id="bear" style="margin-right:64px;" class="button btn3 icon-bear  " onclick="filterFunction(id)" title="filter by Bear icon"></button>
+      <button id="bear" class="button btn3 icon-bear" onclick="filterFunction(id)" title="filter by Bear icon"></button>
+      <button id="marine" style="margin-right:24px;" class="button btn3 icon-marine" onclick="filterFunction(id)" title="filter by Marine icon"></button>
 
       <button id="africa" class="button btn3 icon-africa"  onclick="filterFunction(id)" title="filter by Africa icons"></button>
       <button id="america" class="button btn3 icon-america  " onclick="filterFunction(id)" title="filter by America icon"></button>
@@ -77,7 +78,9 @@
       <button id="science" class="button btn3 icon-science" onclick="filterFunction(id)" title="filter by Science icon"></button>
     </div>
     <div>
-      <input type="text" id="myInput" oninput="filterFunction(id);" placeholder="根据文本搜索 ..." title="Search by card's title, number or keywords">
+
+<!--      <input type="text" id="myInput" oninput="filterFunction(id);" placeholder="根据文本搜索 ..." title="Search by card's title, number or keywords">-->
+        <button id="marine-world" class="button btn0 background-color-marine-world  "  onclick="filterFunction(id)" title="filter Cards">海洋世界扩展</button>
 
       <button id="rock" class="button btn4 icon-rock" onclick="filterFunction(id)" title="filter by Rock icon"></button>
       <button id="water" style="margin-right:50px;"  class="button btn4 icon-water" onclick="filterFunction(id)" title="filter by Water icon"></button>
@@ -920,6 +923,145 @@
         <div class="name">Bennett's Wallaby</div>
       </li>
 
+<!--      Marine World-->
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal marine europe size1 rock symbiosis ap">
+          <div class="number">#547</div>
+          <div class="name">Mediterranean rainbow wrasse</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal c2 marine bird africa size3 rock water specialty ap">
+          <div class="number">#554</div>
+          <div class="name">African Penguin</div>
+      </li>
+
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal c3 marine predator australia size5 rock ap">
+          <div class="number">#536</div>
+          <div class="name">Longhorn cowfish</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal c4 marine africa size2 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal c4 marine africa size1 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal c5 marine australia size1 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal c6 ape america size4 rock ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal c7 marine asia size5 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal c8 marine america size1 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal c9 marine australia size2 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal c10 marine africa size1 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r2 bear predator europe size3 rock ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r2 c2 marine america size1 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r2 c3 marine lizard america size3 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r2 c4 marine size1 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r2 c5 marine europe size3 rock ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r2 c6 marine africa size3 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r2 c7 marine asia size2 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r2 c7 marine asia size1 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r2 c9 marine predator america size4 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r2 c10 marine asia size1 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r3 marine herbivore america size1 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r3 c2 ape africa size3 rock ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
   </ul>
 
   <!--SPONSORS-->
@@ -1308,6 +1450,56 @@
           <div class="name">Free-range New World Monkeys</div>
         </li>
 
+<!--      Marine World-->
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv r5 sponsor ape">
+          <div class="number">#264</div>
+          <div class="name">Free-range New World Monkeys</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv r5 c2 sponsor science marineape">
+          <div class="number">#264</div>
+          <div class="name">Free-range New World Monkeys</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv r5 c3 sponsor ape">
+          <div class="number">#264</div>
+          <div class="name">Free-range New World Monkeys</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv r5 c4 sponsor marine herbivore ape ape">
+          <div class="number">#264</div>
+          <div class="name">Free-range New World Monkeys</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv r5 c5 sponsor pet ape">
+          <div class="number">#264</div>
+          <div class="name">Free-range New World Monkeys</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv r5 c6 sponsor science ape">
+          <div class="number">#264</div>
+          <div class="name">Free-range New World Monkeys</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv r5 c7 sponsor ape">
+          <div class="number">#264</div>
+          <div class="name">Free-range New World Monkeys</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv r5 c8 sponsor ape">
+          <div class="number">#264</div>
+          <div class="name">Free-range New World Monkeys</div>
+      </li>
+
+
   </ul>
 
   <!--STANDARD PROJECTS-->
@@ -1504,6 +1696,30 @@
       <div class="number">#132</div>
       <div class="name">Research</div>
     </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv project r6 lizard">
+          <div class="number">#132</div>
+          <div class="name">Research</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv project r6 c2 bird">
+          <div class="number">#132</div>
+          <div class="name">Research</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv project r6 c3 ape">
+          <div class="number">#132</div>
+          <div class="name">Research</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv project r6 c4 herbivore">
+          <div class="number">#132</div>
+          <div class="name">Research</div>
+      </li>
   </ul>
 
   <!--Endgame CARDS-->
@@ -1610,6 +1826,27 @@
           <div class="number">#017</div>
           <div class="name">Association Work Zoo</div>
       </li>
+
+<!--      Marine World-->
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv endgame r7">
+          <div class="number">#017</div>
+          <div class="name">Association Work Zoo</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv endgame r7 c2">
+          <div class="number">#017</div>
+          <div class="name">Association Work Zoo</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv endgame r7 c3">
+          <div class="number">#017</div>
+          <div class="name">Association Work Zoo</div>
+      </li>
+
   </ul>
 
   <button id="button-load-more" class="button button2 btn-load-more" onClick="displayCards()">加载更多</button>
