update marine world

--- a/arknova-cards-list.html
+++ b/arknova-cards-list.html
@@ -1057,6 +1057,12 @@
           <div class="number">#536</div>
           <div class="name">Heteractis magnifica</div>
       </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv animal r3 c3 marine africa size4 ap">
+          <div class="number">#536</div>
+          <div class="name">Heteractis magnifica</div>
+      </li>
   </ul>
 
   <!--SPONSORS-->
@@ -1490,6 +1496,12 @@
 
       <li onclick="getClickedCard();"
           class="cards7 marine-world filterDiv r5 c8 sponsor ape">
+          <div class="number">#264</div>
+          <div class="name">Free-range New World Monkeys</div>
+      </li>
+
+      <li onclick="getClickedCard();"
+          class="cards7 marine-world filterDiv r3 c4 sponsor science">
           <div class="number">#264</div>
           <div class="name">Free-range New World Monkeys</div>
       </li>
