feat: reset branch, and add href to new website

--- a/arknova-cards-list.html
+++ b/arknova-cards-list.html
@@ -51,6 +51,12 @@
         </a>
     </div>
 
+          <div id="buttonsContainer-header">
+              <div id="titleContainer">
+                  <div class="title-style">欢迎体验<a href="https://ark-nova.ender-wiggin.com/zh-CN" style="color: #fff">新版网站</a>并帮忙<a href="https://docs.qq.com/doc/DTkpLSkhFS2pLblN6?u=d9185d9fe3704a95a1c03d02dd7e0cd4" style="color: #fff">翻译</a></div>
+              </div>
+          </div>
+
 
   <div id="buttonsContainer-body">
     <div id="myBtnContainer1" style="line-height:55px;margin-bottom:10px;">
