feat: add umami

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <link rel="shortcut icon" type="image/png" href="images-ark/favicon.png">
   <link rel="stylesheet" type="text/css" href="css/home.css?v=1.0.0">
   <title>Ark Nova</title>
+  <script async src="https://eu.umami.is/script.js" data-website-id="17267860-bfde-4e88-b726-08eb23d5b66c"></script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
   <!--- scripts  --->
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-116626580-1"></script>
